--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="600dp"
@@ -12,15 +11,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:orientation="vertical"
+            android:background="@color/black"
             android:gravity="center_horizontal"
-            android:background="@color/black">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_marginTop="40dp"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/homepng" />
 
             <TextView
@@ -37,9 +36,7 @@
             android:id="@+id/aboutus"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:background="@drawable/line"
-
-            >
+            android:background="@drawable/line">
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -61,39 +58,11 @@
                 android:textSize="20dp" />
         </LinearLayout>
 
-      <!--  <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_marginTop="0dp"
-            android:background="@drawable/line"
-            >
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/update" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="30dp"
-                android:text="Update"
-                android:textSize="20dp" />
-
-        </LinearLayout>-->
-
         <LinearLayout
             android:id="@+id/setting"
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_marginTop="0dp">
-            >
 
             <ImageView
                 android:id="@+id/imageView6"
@@ -117,9 +86,4 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/rl_container"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
