--- a/app/src/main/res/layout/wm_main_layout.xml
+++ b/app/src/main/res/layout/wm_main_layout.xml
@@ -4,31 +4,26 @@
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
 
-    <View
-        android:id="@+id/wm_main_bgview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"/>
-
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <android.support.v7.widget.LinearLayoutCompat
             android:id="@+id/wm_top"
             android:layout_width="280dp"
             android:layout_height="280dp"
+            android:background="@drawable/gray_background"
             android:orientation="vertical"
             android:weightSum="3">
 
             <android.support.v7.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/wm_item_cancel"
@@ -37,59 +32,59 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/back"/>
+                    android:src="@drawable/back" />
 
                 <ImageView
-                    android:id="@+id/wm_item_phone"
+                    android:id="@+id/wm_item_photo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/camera"/>
+                    android:src="@drawable/camera" />
 
                 <ImageView
                     android:id="@+id/wm_item_power"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/lock"/>
+                    android:src="@drawable/lock" />
             </android.support.v7.widget.LinearLayoutCompat>
 
             <android.support.v7.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/wm_item_home"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/home"/>
+                    android:src="@drawable/home" />
 
                 <ImageView
                     android:id="@+id/wm_item_screenshot"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/screenshot"/>
+                    android:src="@drawable/screenshot" />
 
                 <ImageView
                     android:id="@+id/wm_item_flashlight"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/flashlight"/>
+                    android:src="@drawable/flashlight" />
             </android.support.v7.widget.LinearLayoutCompat>
 
             <android.support.v7.widget.LinearLayoutCompat
@@ -101,83 +96,37 @@
                     android:id="@+id/wm_item_wifi"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/wifi"/>
+                    android:src="@drawable/wifi" />
 
                 <ImageView
                     android:id="@+id/wm_item_bluetooth"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/bluetooth"/>
+                    android:src="@drawable/bluetooth" />
 
                 <ImageView
                     android:id="@+id/wm_item_airplane"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
                     android:padding="24dp"
-                    android:src="@drawable/airplane"/>
+                    android:src="@drawable/airplane" />
             </android.support.v7.widget.LinearLayoutCompat>
 
         </android.support.v7.widget.LinearLayoutCompat>
 
-        <android.support.v7.widget.LinearLayoutCompat
-            android:id="@+id/wm_bottom"
-            android:layout_width="320dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="25dp"
-            android:visibility="invisible">
-
-            <ImageView
-                android:id="@+id/wm_item_hotel"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="15dp"
-                android:layout_gravity="center"
-                android:paddingRight="15dp"
-                android:src="@drawable/hotel"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:id="@+id/wm_item_car"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_gravity="center"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:src="@drawable/car"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:id="@+id/wm_item_lunch"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="15dp"
-                android:layout_gravity="center"
-                android:paddingRight="15dp"
-                android:src="@drawable/lunch"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:id="@+id/wm_item_airport"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:layout_gravity="center"
-                android:src="@drawable/airport"
-                android:visibility="gone"/>
-
-        </android.support.v7.widget.LinearLayoutCompat>
     </LinearLayout>
+
+    <View
+        android:id="@+id/wm_main_bgview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent" />
 </RelativeLayout>
