--- a/app/src/main/res/layout/wm_main_layout.xml
+++ b/app/src/main/res/layout/wm_main_layout.xml
@@ -1,132 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/wm_main_bgview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
 
-    <View
-        android:id="@+id/wm_main_bgview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/wm_top"
+        android:layout_width="280dp"
+        android:layout_height="280dp"
         android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:background="@drawable/gray_background"
+        android:orientation="vertical"
+        android:weightSum="3">
 
-        <android.support.v7.widget.LinearLayoutCompat
-            android:id="@+id/wm_top"
-            android:layout_width="280dp"
-            android:layout_height="280dp"
-            android:background="@drawable/gray_background"
-            android:orientation="vertical"
-            android:weightSum="3">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-            <android.support.v7.widget.LinearLayoutCompat
+            <ImageView
+                android:id="@+id/wm_item_back"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:padding="24dp"
+                android:src="@drawable/back" />
 
-                <ImageView
-                    android:id="@+id/wm_item_cancel"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/back" />
 
-                <ImageView
-                    android:id="@+id/wm_item_photo"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/camera" />
-
-                <ImageView
-                    android:id="@+id/wm_item_power"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/lock" />
-            </android.support.v7.widget.LinearLayoutCompat>
-
-            <android.support.v7.widget.LinearLayoutCompat
+            <ImageView
+                android:id="@+id/wm_item_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:padding="24dp"
+                android:src="@drawable/home" />
 
-                <ImageView
-                    android:id="@+id/wm_item_home"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/home" />
-
-                <ImageView
-                    android:id="@+id/wm_item_screenshot"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/screenshot" />
-
-                <ImageView
-                    android:id="@+id/wm_item_flashlight"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/flashlight" />
-            </android.support.v7.widget.LinearLayoutCompat>
-
-            <android.support.v7.widget.LinearLayoutCompat
+            <ImageView
+                android:id="@+id/wm_item_power"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/lock" />
+        </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/wm_item_wifi"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/wifi" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/wm_item_bluetooth"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/bluetooth" />
+            <ImageView
+                android:id="@+id/wm_item_photo"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/camera" />
 
-                <ImageView
-                    android:id="@+id/wm_item_airplane"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:padding="24dp"
-                    android:src="@drawable/airplane" />
-            </android.support.v7.widget.LinearLayoutCompat>
+            <ImageView
+                android:id="@+id/wm_item_screenshot"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/screenshot" />
 
-        </android.support.v7.widget.LinearLayoutCompat>
+            <ImageView
+                android:id="@+id/wm_item_flashlight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/flashlight" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/wm_item_wifi"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/wifi" />
+
+            <ImageView
+                android:id="@+id/wm_item_bluetooth"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/bluetooth" />
+
+            <ImageView
+                android:id="@+id/wm_item_airplane"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:padding="24dp"
+                android:src="@drawable/airplane" />
+        </LinearLayout>
 
     </LinearLayout>
 
